# GD32F407VET6-FreeRTOS-LVGL-SPI-DMA

./: .clang-format  .gitignore  CMakeLists.txt  README.md  删除目标文件(用于打包备份).bat
app/: main.c
board/: board.c  board.h  sys.h
board/linker_scripts/: link.ld
bsp/FreeRTOS/: FreeRTOSConfig.h
bsp/FreeRTOS/include/: semphr.h
bsp/LCD/: lcd.c  lcd.h
bsp/OLED/: oled.c  oled.h
bsp/SPI/: SPI.c  SPI.h
bsp/TOUCH/: touch.c  touch.h
bsp/easylogger/inc/: elog.h  elog_cfg.h
bsp/easylogger/port/: elog_port.c
bsp/led/: bsp_led.c  bsp_led.h
bsp/lvgl/: lv_conf.h
bsp/lvgl/examples/porting/: lv_port_disp.c  lv_port_indev.c
bsp/uart/: bsp_uart.c  bsp_uart.h
libraries/CMSIS/GD/GD32F4xx/Include/: gd32f4xx.h
libraries/CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
libraries/CMSIS/GD/GD32F4xx/Source/ARM/: startup_gd32f407_427.s
module/buzzer/: buzzer.c  buzzer.h
module/ringbuffer/: ringbuffer.c  ringbuffer.h
module/soft_timer/: soft_timer.c  soft_timer.h
project/MDK/: JLinkSettings.ini  project.uvoptx  project.uvprojx
project/MDK/RTE/_Project/: RTE_Components.h
